<resources>
    <string name="app_name">TFM</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_chat">Chat</string>
    <string name="title_groupchat">Group Chat</string>
    <string name="title_notifications">Notifications</string>
    <string name="chat">Chat</string>
    <string name="group">Groups</string>
    <string name="username_sample">Dwight Schrute</string>
    <string name="time_sample">17:58</string>
    <string name="text_sample">I am fast. To give you a reference point I am somewhere between a snake and a mongoose…
        And a panther.
    </string>
    <string name="newgroup">New group</string>
    <string name="settings">Settings</string>
    <string name="messages">Messages</string>
    <string name="hint">Search</string>
    <string name="videocall">Videocall</string>
    <string name="call">call</string>
    <string name="chat_hint">Type a message</string>
    <string name="long_text_sample">How are you doing? This is a long message that should probably wrap.</string>
    <string name="dwight_quote">I grew up on a farm. I have seen animals having sex in every position imaginable. Goat
        on chicken. Chicken on goat. Couple of chickens doing a goat, couple of pigs watching.
    </string>
    <string name="faces">emoji_faces</string>
    <string name="most_used">Most Used</string>
    <string name="animal">Animal</string>
    <string name="food">Food</string>
    <string name="sport">Sport</string>
    <string name="vehicle">Vehicle</string>
    <string name="idea">Idea</string>
    <string name="character">Character</string>
    <string name="flag">Flag</string>
    <string name="emoji">Emoji</string>
    <string name="gif">Gif</string>
    <string name="caption_hint">Add a caption</string>
    <string name="search_title">Search</string>
    <string name="current_location">Dénia</string>
    <string name="send_location_text">Send location</string>
    <string name="place">Current location</string>
    <string name="pinned_location_sample">Avenida Miguel Hernandez, 10B</string>
    <string name="pdf_weight_sample">3.3MB</string>
    <string name="pdf_title">dni_pasaporte.pdf</string>
    <string name="no_status_sample">No status</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="create_account">Create your account</string>
    <string name="create">Join us</string>
    <string name="password">Password</string>
    <string name="email_hint">johndoe@gmail.com</string>
    <string name="user_hint">John Doe</string>
    <string name="signout">Sign out</string>
    <string name="profile">Profile</string>
    <string name="bethefirst">Be the first to start the conversation</string>
    <string name="username_warning">This is not your username or pin. This name will be visible only to this App users</string>
    <string name="name">Username</string>
    <string name="status_title">Status</string>
    <string name="status_sample">In the gym</string>
    <string name="email_title">Email</string>
    <string name="email_sample">danny27995@gmail.com</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="enter_text">Enter name:</string>
    <string name="accept">Accept</string>
    <string name="notificationToneTitle">Notification tone</string>
    <string name="vibrateTitle">Vibrate</string>
    <string name="defaultText">Default</string>
    <string name="enablePopup">User notifications show when message arrives</string>
    <string name="aboutus">About us</string>
    <string name="faqs">FAQ</string>
    <string name="termsAndConditions">Terms and Privacy Policy</string>
    <string name="contactus">Contact us</string>
    <string name="prefLanguage">Language preference</string>
    <string name="languageSummary">Conversations will be translated to the chosen language</string>
    <string name="setting_title">Settings</string>
    <string name="removeModels">Delete language models</string>
    <string name="removeModelSummary">Missing models may be downloaded if needed</string>
    <string name="modelsdeleted">All models deleted</string>
    <string name="restartapp">Restart to view the changes</string>
    <string name="downloading">Downloading models...</string>
    <string name="privacypolicy">Your privacy is important to us. It is Le Danny Yang Inc. policy to respect your privacy regarding any information we may collect from you across our website, http://ledannyang.com, and other sites we own and operate. \n\n
        We only ask for personal information when we truly need it to provide a service to you. We collect it by fair and lawful means, with your knowledge and consent. We also let you know why we’re collecting it and how it will be used.\n\n
        We only retain collected information for as long as necessary to provide you with your requested service. What data we store, we’ll protect within commercially acceptable means to prevent loss and theft, as well as unauthorised access, disclosure, copying, use or modification.\n\n
        We don’t share any personally identifying information publicly or with third-parties, except when required to by law.\n\n
        Our website may link to external sites that are not operated by us. Please be aware that we have no control over the content and practices of these sites, and cannot accept responsibility or liability for their respective privacy policies.\n\n
        You are free to refuse our request for your personal information, with the understanding that we may be unable to provide you with some of your desired services.\n\n
        Your continued use of our website will be regarded as acceptance of our practices around privacy and personal information. If you have any questions about how we handle user data and personal information, feel free to contact us.
        This policy is effective as of 27 September 2019.
    </string>
    <string name="privacypolicyTitle">Privacy Policy</string>
    <string name="selectLanguagePreference">Please select a language Settings > Download Model</string>
    <string name="vibrateSummary">Phone will vibrate after message is received</string>
    <string name="label_sample">label</string>
    <string name="image_transition">image_transition</string>
    <string name="download_user_data">Downloading user data</string>
    <string name="enter_status">Status</string>
    <string name="enter_username">Username</string>
    <string name="modelsdownloaded">Model downloaded</string>
    <string name="unread_message_sample">3</string>
    <string name="media_transition">media_transition</string>
    <string name="signout_alert">If signed out, all messages will be removed locally</string>
    <string name="sure">Sign out</string>
    <string name="deleteModel">Delete language models</string>
    <string name="deleteModelMessage">Language models will be deleted. You can download them again later.</string>
    <string name="field_not_empty">Fields cannot be empty</string>
</resources>
