<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

    <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp"
            android:elevation="4dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_text"
                android:fontFamily="@font/robotobold"
                android:textSize="@dimen/text_large"/>

        <EditText
                android:id="@+id/dialog_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_hint"
                android:inputType="textPersonName|textCapSentences"
                android:maxLines="1"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="right">
            <Button
                    android:id="@+id/dialog_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:background="?android:attr/selectableItemBackground"/>
            <Button
                    android:id="@+id/dialog_accept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accept"
                    android:textColor="@color/colorPrimary"
                    android:background="?android:attr/selectableItemBackground"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>