<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.LoginActivity"
        android:paddingHorizontal="50dp"
        android:background="#F6F5F3">

    <TextView
            android:layout_marginTop="180dp"
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="40sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/colorPrimaryText"
            />
    <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:background="@drawable/login_form_background"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:paddingHorizontal="20dp"
            android:elevation="2dp"/>
    <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/login_form_background"
            android:layout_marginVertical="10dp"
            android:paddingHorizontal="20dp"
            android:elevation="2dp"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="2dp"
            android:gravity="center">
        <TextView
                android:id="@+id/login_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account" />
        <Button
                android:id="@+id/login_signup_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:paddingLeft="5dp"
                android:background="?android:attr/selectableItemBackground"/>
    </LinearLayout>
    <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:background="@drawable/button_background"
            android:layout_marginTop="20dp"
            android:elevation="2dp"/>

    <ProgressBar
            android:id="@+id/login_progressbar"
            android:layout_marginTop="30dp"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
</LinearLayout>