<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#F6F5F3"
        tools:context=".activity.SignupActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/signup_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="50dp">

        <TextView
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textSize="35sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/colorPrimaryText"/>

        <EditText
                android:id="@+id/signup_user"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPersonName"
                android:hint="@string/user_hint"
                android:background="@drawable/login_form_background"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="10dp"
                android:paddingHorizontal="20dp"
                android:elevation="2dp"/>

        <EditText
                android:id="@+id/signup_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint"
                android:background="@drawable/login_form_background"
                android:layout_marginBottom="10dp"
                android:paddingHorizontal="20dp"
                android:elevation="2dp"/>
        <EditText
                android:id="@+id/signup_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:background="@drawable/login_form_background"
                android:layout_marginVertical="10dp"
                android:paddingHorizontal="20dp"
                android:elevation="2dp"/>

        <Button
                android:id="@+id/signup_joinus"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/create"
                android:textAllCaps="false"
                android:background="@drawable/button_background"
                android:layout_marginTop="20dp"
                android:elevation="2dp"/>

        <ProgressBar
                android:id="@+id/signup_progressbar"
                android:layout_marginTop="30dp"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
    </LinearLayout>
</LinearLayout>