<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground">

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:src="@drawable/dwight"
            android:padding="10dp"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="8dp">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <androidx.emoji.widget.EmojiTextView
                    android:text="@string/username_sample"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/name_chat"
                    android:textSize="@dimen/text_medium"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryText"/>
            <TextView
                    android:text="@string/time_sample"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/last_message_time_chat"
                    android:gravity="right"
                    android:fontFamily="@font/robotoregularitalic"
                    android:paddingHorizontal="20dp"/>
        </LinearLayout>
        <androidx.emoji.widget.EmojiTextView
                android:text="@string/text_sample"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/last_message_chat"
                android:ellipsize="end"
                android:maxLines="2"
                android:textSize="@dimen/text_medium"/>
    </LinearLayout>
</LinearLayout>