<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/pdf_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:paddingRight="60dp"
        android:paddingLeft="15dp"
        android:gravity="left">
    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/pdf_image"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/dwight"/>
    <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/pdf_image">
        <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="2dp"
                app:cardCornerRadius="5dp">
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/pdf_logo"
                        android:id="@+id/imageView"
                        android:layout_weight="1"
                        android:padding="10dp"/>
                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="3"
                        android:layout_gravity="center"
                        android:padding="5dp">
                    <TextView
                            android:id="@+id/pdf_title"
                            android:text="@string/pdf_title"
                            android:textSize="@dimen/text_large"
                            android:textStyle="bold"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    <TextView
                            android:id="@+id/pdf_weight"
                            android:text="@string/pdf_weight_sample"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
                android:id="@+id/pdf_time"
                android:text="@string/time_sample"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="5dp"/>
    </LinearLayout>
</RelativeLayout>